# cogs

./: Cargo.toml  cogs.js  cogs_bg.wasm  index.html  manifest.json  readme.md  sw.js
.github/workflows/: rust.yml
assets/: manifest.json
be/: Cargo.toml  readme.md
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/app/: app_err.rs  app_err_uc.rs  mod.rs
shared/src/domain/model/: access_level.rs  action.rs  id.rs  mod.rs
shared/src/domain/model/meta/: item_template.rs  kind.rs  mod.rs
shared/src/domain/model/meta/attr/: attr.rs  attr_template.rs  attr_tmpl.rs  attr_value_type.rs  boolean_attr.rs  date_attr.rs  datetime_attr.rs  link_template.rs  mod.rs  numeric_attr.rs  text_attr.rs
shared/src/domain/model/meta/item/: item.rs  item_tmpl.rs  mod.rs
shared/src/dtos/: commons.rs  curr_user_account.rs  err_resp_dto.rs  login_dtos.rs  login_request.rs  login_result.rs  mod.rs
src/: app.rs  icons.rs  lib.rs  main.rs  view.rs
svc/: .env  Cargo.toml  dev.sh  readme.md
svc/ops/db/: apply_changes.sh  init.sh  readme.md
svc/ops/db/migrations/: 0001_user_accounts_tbl.sql  0002_create_user_permissions_tbl.sql  0003_attr_templates_tbl.sql  0004_item_templates_tbls.sql  0005_create_items_tbl.sql  0006_create_attrs_tbls.sql  0007_create_item_links_tbl.sql  0008_access_levels_tbl.sql
svc/src/: app_err_uc.rs  lib.rs  main.rs
svc/src/domain/model/: id.rs  mod.rs  user.rs
svc/src/dtos/: curr_user_account.rs  login_result.rs
svc/src/infra/: utils.rs
svc/src/server/: config.rs  db.rs  logging.rs  mod.rs  routes.rs  session.rs  state.rs
svc/src/server/api_utils/: responses.rs
svc/src/server/auth/: auth.rs  auth_api.rs  mod.rs
svc/src/server/data_mgmt/: access_level_repo.rs  api.rs  attr_templ_repo.rs  attr_tmpl_repo.rs  data_mgmt.rs  data_mgmt_api.rs  item_templ_repo.rs  item_tmpl_repo.rs  mod.rs
svc/src/server/model/: id.rs
svc/src/server/user/: user_accounts_repo.rs  user_mgmt.rs
svc/src/utils/: utils.rs
ui/: Cargo.toml  dev.sh  index.html  readme.md  rust-toolchain
ui/assets/: logo_o.xcf
ui/src/: app.rs  app_msg_handlers.rs  colors.rs  comps.rs  constants.rs  consts.rs  header.rs  header_footer.rs  home.rs  lib.rs  login.rs  main.rs  messages.rs  states.rs  ui_state.rs  utils.rs  view.rs
ui/src/comps/: attr_props.rs  attr_templ_preview.rs  attr_templ_props.rs  attr_tmpl_form.rs  attr_tmpl_win.rs  dropdown.rs  explore_table.rs  footer.rs  header.rs  item_tabs.rs  item_templ_preview.rs  item_templ_props.rs  item_tmpl_form.rs  item_tmpl_preview.rs  item_tmpl_win.rs  item_win.rs  link_tmpl_form.rs  menu_utils.rs  mod.rs  modal.rs  password_input.rs  symbols.rs  user_menu.rs  user_widget.rs
ui/src/comps/item/: item_win.rs  item_win_attrs.rs  mod.rs  new_item_ask.rs
ui/src/explore/: explore_table.rs  explore_view.rs  explore_view_state.rs  explore_wins.rs  mod.rs
ui/src/security/: mod.rs
ui/src/security/access_levels/: access_level_preview.rs  access_level_win.rs  mod.rs
ui/src/state/: auth_state.rs  data_state.rs  explore_view_state.rs  mod.rs  ui_state.rs
ui/src/state/data/: data_state.rs  managed.rs  mod.rs  state.rs
ui/src/views/: explore.rs  explore_view.rs  home.rs  home_view.rs  login.rs  login_view.rs  mod.rs  settings_view.rs
ui/src/views/explore/: explore_view.rs  explore_wins.rs  mod.rs
