#########
[package]
#########

name = "cogs_svc"
version = "0.1.0"
edition = "2024"


##############
[dependencies]
##############

cogs_shared       = { path = "../shared" }
axum              = { version = "=0.8.4", features = [ "macros" ] }
tower             = { version = "=0.5.2", features = [ "util" ] }
tower-http        = { version = "=0.6.6", features = [ "fs", "cors", "trace" ] }
tokio             = { version = "=1.47.1", features = [ "full" ] }
http              = { version = "=1.3.1" }
serde             = { version = "=1.0.226", features = [ "derive" ] }
serde_json        = { version = "=1.0.145" }
sqlx              = { version = "=0.8.6", features = [
    "macros",
    "postgres",
    "runtime-tokio-rustls",
]}

axum_session      = { version = "=0.16.0"  }
axum_session_auth = { version = "=0.16.0", features = [ "rest_mode" ] }
axum_session_sqlx = { version = "=0.5.0",  features = [ "postgres", "tls-rustls" ] }
async-trait       = { version = "=0.1.89"  }

thiserror         = { version = "=2.0.16"  }
anyhow            = { version = "=1.0.100"  }
log               = { version = "=0.4.28"  }
simple_logger     = { version = "=5.0.0"   }

dotenvy           = { version = "=0.15.7"  }
randoid           = { version = "=0.3.0"   }
md5               = { version = "=0.8.0"   }
config            = { version = "=0.15.16" }
snowflake-ng      = { version = "=0.1.5"   }
chrono            = { version = "=0.4.42"  }

#######
[lints]
#######

workspace = true

